TGA imageformat: fix broken canRead plugin function

Plugin is now moving QIODevice pos to 0 before
exiting from canRead function, so it doesn't break
other existing imageformat plugins functionality.

Task-number: QTBUG-24201
Change-Id: Ib58b0458215cf5ad705dffa0aaf6a7463d1f089e
Reviewed-by: Sarah Jane Smith <sarah.j.smith@nokia.com>